--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -57,8 +57,9 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "cars-page"}
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "car-post"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Engine", name: "engine", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
