--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
+    "typography-theme-alton": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "uuid": "^3.2.1"
   },
