--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
+  "name": "dannyallegrezza.com",
   "description": "Example Gatsby, and Netlify CMS project",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "Danny Allegrezza",
   "dependencies": {
     "bulma": "^0.7.5",
     "gatsby": "^2.8.6",
