--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.13",
     "gatsby-remark-images": "^3.0.14",
+    "gatsby-remark-prismjs": "^3.3.35",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-filesystem": "^2.0.38",
-    "gatsby-transformer-remark": "^2.3.12",
+    "gatsby-transformer-remark": "^2.6.58",
     "gatsby-transformer-sharp": "^2.1.21",
     "gatsby-transformer-yaml": "^2.1.12",
     "gatsby-transformer-yaml-netlify": "^1.0.0-alpha.1",
@@ -28,6 +29,7 @@
     "netlify-cms": "^2.9.1",
     "node-sass": "^4.13.0",
     "parcel-bundler": "^1.12.4",
+    "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
